# paperclip

./: .gitignore  pnpm-lock.yaml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ModuleCard.module.css  ModuleCard.tsx  Sidebar.module.css  Sidebar.tsx
desktop/src/lib/: paperclip.ts
desktop/src/modules/: shared.module.css
desktop/src/modules/agents/: AgentsPanel.module.css  AgentsPanel.tsx
desktop/src/modules/cael/: CaelPanel.tsx
desktop/src/modules/content/: ContentPanel.module.css  ContentPanel.tsx
desktop/src/modules/creative/: CreativePanel.module.css  CreativePanel.tsx
desktop/src/modules/mm/: MaisonPanel.tsx
desktop/src/modules/ops/: OpsPanel.module.css  OpsPanel.tsx
desktop/src/theme/: ThemeContext.tsx  global.css  tokens.css
server/src/routes/: agents.ts
ui/src/components/: AgentConfigForm.tsx  agent-config-primitives.tsx
ui/src/pages/: Agents.tsx
