[package]
name = "command-center"
version = "0.1.0"
description = "Maison Maintenant Command Center"
authors = ["hhhhansel"]
edition = "2021"

[lib]
name = "command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
